--- a/styles/style.css
+++ b/styles/style.css
@@ -61,7 +61,7 @@ body {
   background-color: #f3f7f9;
 }
 
-.header-container {
+.container {
   width: 1400px;
   margin: 0 auto;
 }
@@ -263,13 +263,180 @@ body {
   border-radius: 4px;
 }
 
+.section-background {
+  padding-top: 52px;
+  background-color: #f2f2f2;
+}
+
+.catalog {
+  padding: 0 115px;
+}
+
+.catalog-list {
+  display: grid;
+  grid-template-columns: repeat(3, 370px);
+  margin: 0;
+  padding: 0;
+  gap: 27px 30px;
+  list-style-type: none;
+  color: #ffffff;
+}
+
+.catalog-item {
+  min-height: 180px;
+  border-radius: 2px;
+  background-repeat: no-repeat;
+  background-position: top 45px right 37px;
+}
+
+.item-materials {
+  background-color: #ffbf47;
+  background-image: url(../images/materials.svg);
+}
+
+.item-instruments {
+  background-color: #3bbce3;
+  background-image: url(../images/tool.svg);
+}
+
+.item-technics {
+  background-color: #dc91d8;
+  background-image: url(../images/technique.svg);
+}
+
+.item-discounts {
+  background-color: #8ed78f;
+  background-image: url(../images/discounts.svg);
+}
+
+.item-delivery {
+  background-color: #ffbf47;
+  background-image: url(../images/delivery.svg);
+}
+
 .catalog-title {
+  margin: 20px 0 57px 25px;
   font-weight: 700;
   font-size: 24px;
   line-height: 30px;
   text-transform: uppercase;
+}
+
+.catalog-link {
+  display: block;
+  box-sizing: border-box;
+  margin-left: 25px;
+  width: 180px;
+  padding: 12px 1px 9px 33px;
+  font-family: "PT Sans", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  text-decoration: none;
   color: #ffffff;
-  background-color: #000000;
+  outline: 1px solid #f9f5f0;
+  border-radius: 2px;
+  background-image: url(../images/arrow.svg);
+  background-repeat: no-repeat;
+  background-position: 16px;
+}
+
+.item-slider {
+  position: relative;
+  grid-row: 2/4;
+  grid-column: 1/3;
+}
+
+.slider-list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.slider-item {
+  position: relative;
+  display: none;
+}
+
+.slide-item-current {
+  display: block;
+}
+
+.slider-product-img {
+  display: block;
+}
+
+.slider-name {
+  position: absolute;
+  top: 51px;
+  left: 51px;
+  font-family: "Fira Sans", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 42px;
+  text-transform: uppercase;
+}
+
+.slider-text {
+  position: absolute;
+  top: 105px;
+  left: 51px;
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.slider-switch {
+  position: absolute;
+  top: 173px;
+  left: 19px;
+  display: flex;
+  justify-content: space-between;
+  width: 733px;
+}
+
+.slider-button {
+  width: 50px;
+  height: 50px;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.slider-prev {
+  background-image: url(../images/left.svg);
+}
+
+.slider-next {
+  background-image: url(../images/right.svg);
+}
+
+.slider-link {
+  position: absolute;
+  left: 51px;
+  bottom: 48px;
+  display: block;
+  width: 195px;
+  padding: 13px 6px 14px 5px;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  border-radius: 4px;
+  color: #ffffff;
+  background-color: #ee3643;
+  text-align: center;
+}
+
+.perforators-catalog{
+  padding: 0 115px;
+  margin: 0 auto;
 }
 
 .title-section {
