Добавляет пагинацию в слайдер

--- a/styles/style.css
+++ b/styles/style.css
@@ -263,9 +263,9 @@ body {
   border-radius: 4px;
 }
 
-.section-background {
+.catalog-background {
   padding-top: 52px;
-  background-color: #f2f2f2;
+  background-color: #ffffff;
 }
 
 .catalog {
@@ -432,6 +432,30 @@ body {
   color: #ffffff;
   background-color: #ee3643;
   text-align: center;
+}
+
+.slider-pagination {
+  position: absolute;
+  bottom: 22px;
+  left: 366px;
+  width: 40px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.slider-pagination-button {
+  width: 8px;
+  height: 8px;
+  padding: 0;
+  border: none;
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: #ffd180;
+  opacity: 0.8;
+}
+
+.slider-pagination-current {
+  background-color: #ffffff;
 }
 
 .perforators-catalog{
