--- a/styles/style.css
+++ b/styles/style.css
@@ -122,24 +122,25 @@ body {
 }
 
 .logo-link {
+  display: block;
   width: 220px;
   margin-bottom: -5px;
   padding: 12px 0 14px;
   text-align: center;
   background-color: #ee3643;
   box-shadow: inset 0 -5px 0 0 rgba(0, 0, 0, 0.24);
- }
- 
+}
+
 .header-form {
   position: relative;
 }
 
- .header-form svg {
+.header-form svg {
   position: absolute;
   top: 12px;
   left: 21px;
   opacity: 0.3;
- }
+}
 
 .header-input {
   width: 716px;
@@ -246,7 +247,7 @@ body {
   text-decoration: none;
 }
 
-.navigation-order-link svg{
+.navigation-order-link svg {
   opacity: 0.6;
 }
 
@@ -458,7 +459,7 @@ body {
   background-color: #ffffff;
 }
 
-.perforators-catalog{
+.perforators-catalog {
   padding: 0 115px;
   margin: 0 auto;
 }
@@ -552,12 +553,36 @@ body {
   text-decoration: none;
 }
 
-.services {
+.services-background {
   background-color: #f5f8fa;
+}
+
+.services {
+  padding: 52px 115px;
+  margin: 0 auto;
 }
 
 .services-title {
   text-align: center;
+}
+
+.services-text {
+  font-size: 18px;
+  text-align: center;
+}
+
+.services-list {
+  display: flex;
+  justify-content: space-between;
+  width: 1170px;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.services-item {
+  width: 370px;
+  background-color: #ffffff;
 }
 
 .services-title-chapter {
@@ -569,12 +594,44 @@ body {
   background-color: #ffffff;
 }
 
-.footer-contacts {
+.company-background {
+  background-color: #ffffff;
+}
+
+.company {
+  display: flex;
+  justify-content: space-between;
+  padding: 52px 115px;
+  margin: 0 auto;
+}
+
+.company-info {
+  width: 549px;
+}
+
+.company-contacts {
+  width: 500px;
+}
+
+.footer-contacts-background {
   background-color: #32425c;
 }
 
-.copyright {
+.footer-contacts {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 115px;
+}
+
+.copyright-background {
   background-color: #293449;
+}
+
+.copyright {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 115px;
+  margin: 0 auto;
 }
 
 .contacts-address-text {
@@ -590,6 +647,11 @@ body {
 
 .subscription-mail-link {
   color: #ffd180;
+}
+
+.subscription-form-button {
+  padding: 0;
+  border: none;
 }
 
 .copyright {
