--- a/styles/style.css
+++ b/styles/style.css
@@ -30,7 +30,15 @@
   font-display: swap;
 }
 
+html {
+  height: 100%;
+}
+
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  min-width: 1400px;
   margin: 0;
   font-family: "PT Sans", sans-serif;
   font-style: normal;
@@ -55,6 +63,10 @@ body {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.main-container {
+  flex-grow: 1;
 }
 
 .contacts-background {
